# deepeeRT

./: .gitmodules  3rdParty.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: Ubuntu.yml
dp/: Backend.cpp  Backend.h  CMakeLists.txt  Context.cpp  Context.h  Group.cu  Group.h  Triangles.cu  Triangles.h  World.cu  World.h  common.h  deepeeRT.cpp
dp/cuBQL/: CMakeLists.txt  CuBQLBackend.cu  CuBQLBackend.h  InstanceGroup.cu  InstanceGroup.h
dprt/: Backend.cpp  Backend.h  CMakeLists.txt  Context.cpp  Context.h  Group.h  Instances.h  Triangles.cpp  Triangles.h  common.h  dprt.cpp
dprt/cuBQL/: CMakeLists.txt  CuBQLBackend.cu  CuBQLBackend.h  Group.cu  InstanceGroup.cu  InstanceGroup.h  Triangles.cu  Triangles.h
dprt/owl/: CMakeLists.txt  OWLBackend.cpp  OWLBackend.h  devCode-doubleDistance.cu  devCode-doubleTriTest.cu  devCode.cu
include/deepee/: deepee.h
include/dprt/: dprt.in.h
miniapp/: CMakeLists.txt  Camera.cu  Camera.h  DGEF.h  Mesh.cpp  Mesh.h  import_OBJ.cpp  instanceMiniApp.cu  miniapp.cu
